--- a/package.json
+++ b/package.json
@@ -1,13 +1,37 @@
 {
   "name": "restaurant",
-  "version": "0.0.1",
-  "description": "Template for restaurant webapps",
-  "author": "Lawrence Good",
-  "dependencies": {},
-  "devDependencies": {},
-  "scripts": {
-    "start": "node cluster.js env=production",
-    "test": "node inspect app.js"
+  "version": "1.0.0",
+  "description": "",
+  "repository": {
+    "url": "https://github.com/toomuchrice4u/restaurant.git"
   },
-  "license": "MIT"
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack && node server.js"
+  },
+  "author": "Lawrence Good",
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap-icons": "^1.7.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "css-loader": "^6.5.1",
+    "csurf": "^1.11.0",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "json-schema-traverse": "^1.0.0",
+    "morgan": "^1.10.0",
+    "style-loader": "^3.3.1"
+  },
+  "devDependencies": {
+    "debug": "^4.3.3",
+    "eslint": "^8.5.0",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
+  }
 }
