--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "repository": {
+    "type": "git",
     "url": "https://github.com/toomuchrice4u/restaurant.git"
   },
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack && node server.js"
+    "start": "webpack && nodemon server.js"
   },
   "author": "Lawrence Good",
   "license": "ISC",
@@ -17,14 +18,13 @@
     "bootstrap-icons": "^1.7.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "css-loader": "^6.5.1",
     "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "express-session": "^1.17.2",
-    "json-schema-traverse": "^1.0.0",
     "morgan": "^1.10.0",
     "style-loader": "^3.3.1"
   },
