--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "build:dev": "webpack",
+    "build:dev": "webpack --watch",
     "start": "webpack --mode production && node server.js",
     "start:dev": "webpack && nodemon",
     "lint": "eslint **/*.js",
@@ -43,7 +43,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
-    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
